# trading-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  mcp_server.py  mcp_test_results.json  requirements.txt  research_agent_example.py  research_agent_example_optimized.py  setup_mcp.sh  test_complete_api.sh  test_mcp.py
docs/: API_DOCUMENTATION.md  COINGECKO_INTEGRATION.md  HIGH_OPEN_INTEREST.md  KRAKEN_INTEGRATION.md  MCP_SERVER_README.md  PRODUCTION_READINESS.md  QUICK_START.md  TRENDING_OPTIONS.md  TROUBLESHOOTING.md
examples/: coingecko_example.rs  high_open_interest_example.rs  kraken_example.rs  news_optimization_example.rs  trending_options_example.rs
python-scripts/: crypto.py  main.py
src/: cache.rs  config.rs  errors.rs  http_client.rs  lib.rs  main.rs  middleware.rs  monitoring.rs  optimized_client.rs  state.rs  types.rs  utils.rs
src/helpers/: high_open_interest.rs  metrics.rs  mod.rs  news.rs  options.rs  params.rs  trending_cryptos.rs  trending_options.rs  trending_stocks.rs
src/middleware/: error_handler.rs
src/routes/: coingecko.rs  data.rs  high_open_interest.rs  hyperliquid.rs  kraken.rs  mod.rs  options.rs  pumpfun.rs  solana.rs  system.rs  trending_options.rs  yahoo.rs
src/services/: mod.rs  yahoo.rs
src/sources/: alpaca_data.rs  coingecko_data.rs  finviz_data.rs  helius_data.rs  hyperliquid_data.rs  jito_data.rs  kraken_data.rs  mod.rs  pumpfun_data.rs  reddit_data.rs  yahoo_data.rs
src/trading/: alpaca_trading.rs  kraken_trading.rs  mod.rs
tests/: e2e.rs  integration_tests.rs
