[package]
name = "trading-api"
version = "0.1.0"
edition = "2024"

[dependencies]
finviz_rs = "0.3.3"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yahoo_finance_api = "4"
time = { version = "0.3", features = ["macros"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
futures = "0.3"
statrs = "0.16"
